--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-build
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+CMakeLists.txt.user
+Makefile
+install_manifest.txt
+CTestTestfile.cmake
+Testing/
+
+build/
